fix slack payloads for notifications

--- a/.github/workflows/deploy-cocoapods.yml
+++ b/.github/workflows/deploy-cocoapods.yml
@@ -42,21 +42,34 @@ jobs:
       - name: Push CustomerIO
         run: ./scripts/push-cocoapod.sh CustomerIO.podspec
 
-      - name: Create GitHub issue if fail to deploy 
-        uses: JasonEtco/create-an-issue@v2
-        if: ${{ failure() }} 
-        with: 
-          filename: .github/FAIL_COCOAPODS_DEPLOY_ISSUE_TEMPLATE.md
-        env:
-          GITHUB_TOKEN: ${{ secrets.READ_ONLY_BOT_TOKEN }}
-          RELEASE_VERSION: ${{ github.event.release.tag_name }}
-      
       - name: Notify team of successful deployment 
         uses: slackapi/slack-github-action@v1.18.0        
         if: ${{ success() }}
         with:
           # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
-          payload-file-path: ".github/slack-payloads/deploy_code_success.json"            
+          payload: |
+            {
+              "text": "iOS SDK deployed to Maven Central",
+              "blocks": [
+                  {
+                      "type": "section",
+                      "text": {
+                          "type": "mrkdwn",
+                          "text": "*iOS* SDK deployed to Cocoapods! (deployment step 2 of 2)"
+                      }
+                  },
+                  {
+                      "type": "divider"
+                  },
+                  {
+                      "type": "section",
+                      "text": {
+                          "type": "mrkdwn",
+                          "text": "*Version ${{ github.event.release.tag_name }}*\n\niOS SDK deployment progress:\n ~1. <https://github.com/${{github.repository}}/releases/tag/${{ github.event.release.tag_name }}|create git tag and deploy to Swift Package Manager>~\n~2. deploy to cocoapods~\n\n"
+                      }
+                  }
+              ]
+            }
         env:
           # Incoming webhook URL that sends message into the correct Slack channel. 
           # Help on how to get the webhook URL: https://github.com/marketplace/actions/slack-send#setup-2
@@ -68,7 +81,29 @@ jobs:
         if: ${{ failure() }} # only run this if any previous step failed 
         with:
           # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
-          payload-file-path: ".github/slack-payloads/deploy_code_fail.json"
+          payload: |
+            {
+              "text": "iOS SDK deployment failure",
+              "blocks": [
+                  {
+                      "type": "section",
+                      "text": {
+                          "type": "mrkdwn",
+                          "text": "*iOS* SDK deployment :warning: failure :warning:"
+                      }
+                  },
+                  {
+                      "type": "divider"
+                  },
+                  {
+                      "type": "section",
+                      "text": {
+                          "type": "mrkdwn",
+                          "text": "iOS SDK failed deployment during step *deploy to cocoapods*. View <https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}|CI server logs> to learn why and fix the issue. <https://github.com/customerio/mobile/blob/main/GIT-WORKFLOW.md|Learn more about the deployment process and how to fix errors>."
+                      }
+                  }
+              ]
+            }
         env:
           # Incoming webhook URL that sends message into the correct Slack channel. 
           # Help on how to get the webhook URL: https://github.com/marketplace/actions/slack-send#setup-2
