--- a/.github/workflows/deploy-git-tag.yml
+++ b/.github/workflows/deploy-git-tag.yml
@@ -66,7 +66,29 @@ jobs:
         if: steps.semantic-release.outputs.new_release_published == 'true' # only run if a git tag was made. 
         with:
           # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
-          payload-file-path: ".github/slack-payloads/deploy_git_tag_success.json"
+          payload: |
+            {
+              "text": "iOS SDK git tag created",
+              "blocks": [
+                  {
+                      "type": "section",
+                      "text": {
+                          "type": "mrkdwn",
+                          "text": "*iOS* SDK git tag created successfully and deployed to Swift Package Manager! (deployment step 1 of 2)"
+                      }
+                  },
+                  {
+                      "type": "divider"
+                  },
+                  {
+                      "type": "section",
+                      "text": {
+                          "type": "mrkdwn",
+                          "text": "*Version ${{ steps.semantic-release.outputs.new_release_version }}*\niOS SDK deployment progress:\n ~1. <https://github.com/${{github.repository}}/releases/tag/${{steps.semantic-release.outputs.new_release_version}}|create git ta and deploy to Swift Package Manager>~\n2. deploy to cocoapods\n\n"
+                      }
+                  }
+              ]
+            }
         env:
           # Incoming webhook URL that sends message into the correct Slack channel. 
           # Help on how to get the webhook URL: https://github.com/marketplace/actions/slack-send#setup-2
@@ -78,7 +100,29 @@ jobs:
         if: ${{ failure() }} # only run this if any previous step failed 
         with:
           # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
-          payload-file-path: ".github/slack-payloads/deploy_git_tag_fail.json"
+          payload: |
+            {
+              "text": "iOS SDK deployment failure",
+              "blocks": [
+                  {
+                      "type": "section",
+                      "text": {
+                          "type": "mrkdwn",
+                          "text": "*iOS* SDK deployment :warning: failure :warning:"
+                      }
+                  },
+                  {
+                      "type": "divider"
+                  },
+                  {
+                      "type": "section",
+                      "text": {
+                          "type": "mrkdwn",
+                          "text": "iOS SDK failed deployment during step *create git tag*. View <https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}|CI server logs> to learn why and fix the issue. <https://github.com/customerio/mobile/blob/main/GIT-WORKFLOW.md|Learn more about the deployment process and how to fix errors>."
+                      }
+                  }
+              ]
+            }
         env:
           # Incoming webhook URL that sends message into the correct Slack channel. 
           # Help on how to get the webhook URL: https://github.com/marketplace/actions/slack-send#setup-2
