--- a/.github/workflows/deploy-cocoapods.yml
+++ b/.github/workflows/deploy-cocoapods.yml
@@ -8,8 +8,8 @@ on:
     types: [published]
   workflow_dispatch: 
     inputs:
-      tagToPush:
-        description: 'Type name of existing git tag to retry pushing cocoapods for (example: 1.0.3)'
+      tagBranchOrCommitToPush:
+        description: 'Type name of existing git tag (example: 1.0.3) or branch (example: alpha) to retry pushing cocoapods for'
         required: true
         type: string 
 
@@ -26,9 +26,9 @@ jobs:
         uses: actions/checkout@v2
         # If input is not given, that probably means this CI task was run automatically by a new 
         # git tag being pushed. Skip this step and try to deploy pods for new tag. 
-        if: ${{ github.event.inputs.tagToPush != '' }}
+        if: ${{ github.event.inputs.tagBranchOrCommitToPush != '' }}
         with:
-          ref: ${{ github.event.inputs.tagToPush }}
+          ref: ${{ github.event.inputs.tagBranchOrCommitToPush }}
       - name: Install cocoapods 
         run: gem install cocoapods 
       - name: deploy all pods
@@ -57,7 +57,7 @@ jobs:
                       "type": "section",
                       "text": {
                           "type": "mrkdwn",
-                          "text": "*Version ${{ github.event.release.tag_name }}*\n\niOS SDK deployment progress:\n ~1. <https://github.com/${{github.repository}}/releases/tag/${{ github.event.release.tag_name }}|create git tag and deploy to Swift Package Manager>~\n~2. deploy to cocoapods~\n\n"
+                          "text": "*Version ${{ github.event.release.tag_name }}*\n\niOS SDK deployment progress:\n ~1. <https://github.com/${{github.repository}}/releases/tag/${{ github.event.release.tag_name }}|create git tag and deploy to Swift Package Manager>~\n~2. deploy to cocoapods~\n\nBecause it's hard to automatically verify cocoapods get deployed, it's recommended to manually verify if cocoapods got deployed successfully by checking for cococapods emails or https://github.com/cocoaPods/specs to see if new commit was added for the release."
                       }
                   }
               ]
