updating ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ test-report.*
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+.DS_Store
+.github/.DS_Store
+
 ## User settings
 xcuserdata/
 
