--- a/.github/workflows/deploy-cocoapods.yml
+++ b/.github/workflows/deploy-cocoapods.yml
@@ -31,8 +31,18 @@ jobs:
           ref: ${{ github.event.inputs.tagBranchOrCommitToPush }}
       - name: Install cocoapods 
         run: gem install cocoapods 
-      - name: deploy all pods
-        run: ./scripts/deploy-code.sh
+      - name: Push CustomerIOTracking
+        run: ./scripts/push-cocoapod.sh CustomerIOTracking.podspec
+      - name: Push CustomerIOMessagingPush 
+        run: ./scripts/push-cocoapod.sh CustomerIOMessagingPush.podspec
+      - name: Push CustomerIOMessagingPushAPN 
+        run: ./scripts/push-cocoapod.sh CustomerIOMessagingPushAPN.podspec
+      - name: Push CustomerIOMessagingPushFCM 
+        run: ./scripts/push-cocoapod.sh CustomerIOMessagingPushFCM.podspec
+      - name: Push CustomerIOMessagingInApp 
+        run: ./scripts/push-cocoapod.sh CustomerIOMessagingInApp.podspec
+      - name: Push CustomerIO
+        run: ./scripts/push-cocoapod.sh CustomerIO.podspec
 
       - name: Notify team of successful deployment 
         uses: slackapi/slack-github-action@v1.18.0        
