--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install swiftlint 
-        run: brew install swiftlint 
+        run: brew install swiftlint || brew upgrade swiftlint 
       - name: Run swiftlint. Fail if any errors. 
         run: make lint
