--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,7 @@
 
 disabled_rules: 
   - line_length # The swiftformat tool formats the swift code for us to not have super long lines. This rule after swiftformat has become more of an annoyance then a value where most errors are error message strings being too long. 
+  - unused_optional_binding # `let _ =` can be easier to read sometimes then `!= nil` which is what this rule is trying to catch. 
 
 excluded: # paths or files to ignore during linting. Takes precedence over `included`.  
   - .build
