--- a/.github/workflows/deploy-git-tag.yml
+++ b/.github/workflows/deploy-git-tag.yml
@@ -69,6 +69,9 @@ jobs:
           payload: |
             {
               "text": "iOS SDK git tag created",
+              "username": "iOS deployment bot",
+              "icon_url": "https://pngimg.com/uploads/apple_logo/apple_logo_PNG19687.png",
+              "channel": "#squad-mobile",
               "blocks": [
                   {
                       "type": "section",
@@ -103,6 +106,9 @@ jobs:
           payload: |
             {
               "text": "iOS SDK deployment failure",
+              "username": "iOS deployment bot",
+              "icon_url": "https://pngimg.com/uploads/apple_logo/apple_logo_PNG19687.png",
+              "channel": "#squad-mobile",
               "blocks": [
                   {
                       "type": "section",
