--- a/.github/workflows/test-cocoapods.yml
+++ b/.github/workflows/test-cocoapods.yml
@@ -8,45 +8,22 @@ concurrency: # If you push a commit while CI already running, cancel it and just
 
 # By testing each in parallel, we can reduce wait time on CI to merge a PR. 
 jobs:
-  build-common:
+  build-cocoapods:
     runs-on: macos-latest
-    steps: 
-      - uses: actions/checkout@v2      
-      - uses: ./.github/actions/setup-cocoapod-build
-      - run: pod spec lint --allow-warnings CustomerIOCommon.podspec 
-  build-tracking:
-    runs-on: macos-latest
-    steps: 
-      - uses: actions/checkout@v2  
-      - uses: ./.github/actions/setup-cocoapod-build
-      - run: pod spec lint --allow-warnings CustomerIOTracking.podspec
-  build-messaging-push:
-    runs-on: macos-latest
-    steps: 
-      - uses: actions/checkout@v2   
-      - uses: ./.github/actions/setup-cocoapod-build
-      - run: pod spec lint --allow-warnings CustomerIOMessagingPush.podspec 
-  build-messaging-push-apn:
-    runs-on: macos-latest
-    steps: 
-      - uses: actions/checkout@v2      
-      - uses: ./.github/actions/setup-cocoapod-build
-      - run: pod spec lint --allow-warnings CustomerIOMessagingPushAPN.podspec
-  build-messaging-push-fcm:
-    runs-on: macos-latest
-    steps: 
-      - uses: actions/checkout@v2  
-      - uses: ./.github/actions/setup-cocoapod-build
-      - run: pod spec lint --allow-warnings CustomerIOMessagingPushFCM.podspec
-  build-inapp:
-    runs-on: macos-latest
-    steps: 
-      - uses: actions/checkout@v2  
-      - uses: ./.github/actions/setup-cocoapod-build
-      - run: pod spec lint --allow-warnings CustomerIOMessagingInApp.podspec
-  build-cio:
-    runs-on: macos-latest
-    steps: 
-      - uses: actions/checkout@v2  
-      - uses: ./.github/actions/setup-cocoapod-build
-      - run: pod spec lint --allow-warnings CustomerIO.podspec
+    name: Build ${{ matrix.podspec }}
+    strategy:
+      matrix:
+        podspec: 
+        - CustomerIO.podspec
+        - CustomerIOCommon.podspec
+        - CustomerIOTracking.podspec
+        - CustomerIOMessagingPush.podspec
+        - CustomerIOMessagingPushFCM.podspec          
+        - CustomerIOMessagingPushAPN.podspec
+        - CustomerIOMessagingInApp.podspec
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install/update cocoapods 
+        run: gem install cocoapods 
+      - run: pod --version 
+      - run: pod spec lint --allow-warnings ${{ matrix.podspec }}
