--- a/.github/workflows/test-cocoapods.yml
+++ b/.github/workflows/test-cocoapods.yml
@@ -3,7 +3,7 @@ name: Test cocoapods
 on: [push, pull_request]
 
 concurrency: # If you push a commit while CI already running, cancel it and just run your recent push.
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 # By testing each in parallel, we can reduce wait time on CI to merge a PR. 
