--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -27,7 +27,7 @@ jobs:
               "text": "iOS SDK deployment failure",
               "username": "iOS deployment bot",
               "icon_url": "https://pngimg.com/uploads/apple_logo/apple_logo_PNG19687.png",
-              "channel": "#squad-mobile",
+              "channel": "#mobile-deployments",
               "blocks": [
                   {
                       "type": "section",
