--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -15,14 +15,18 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - uses: cycjimmy/semantic-release-action@v2
+    - uses: cycjimmy/semantic-release-action@v3
       id: semantic-release
       with: 
         semantic_version: 18 # version numbers below can be in many forms: M, M.m, M.m.p
         dry_run: true 
         branches: |
           [
-            '${{ github.event.pull_request.head.ref }}'
+            # Provide name of this branch to instruct semantic-release we want to make a (dry-run/test) production deployment. 
+            # If we didn't have this, semantic-release would not run even when using dry-run because this branch is not one of the production branches we use for performing deployments. 
+            # 
+            # Note: might need to use: ${{ github.event.pull_request.head.ref }} when running on a PR. 
+            '${{ github.event.ref }}'
           ]
         extra_plugins: |
           conventional-changelog-conventionalcommits@4
