--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -41,4 +41,7 @@ jobs:
 
     - name: Do something when a new release published
       if: steps.semantic-release.outputs.new_release_published == 'true'
-      run: echo "A new release would have been published"
+      run: |
+        echo "A new release would have been published"
+        echo "${{ steps.semantic-release.outputs.new_release_version }}"
+        echo "${{ steps.semantic-release.outputs.new_release_notes }}"
