simulate squashing and merging PR

--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -1,6 +1,6 @@
 name: Test deployment 
 
-on: [pull_request, push] # push can be removed later on but during development of this feature, I will keep it in. 
+on: [pull_request]
 
 permissions: read-all
 
@@ -15,21 +15,23 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Get branch name
+    - name: Get branch names to use later 
       id: branch-name
       uses: tj-actions/branch-names@v6
+
+    # Careful *not* to do a 'git push' anywhere since we are merging commits into production branches here!
+    # Help with how to squash and merge a PR: https://stackoverflow.com/a/5201642
+    - name: Squash and merge the current pull request to simulate merging this PR 
+      run: |
+        git reset --soft main && git commit -m "${{ github.event.pull_request.title }}"
+        git checkout main && git pull
+        git merge ${{ steps.branch-name.outputs.current_branch }}
 
     - uses: cycjimmy/semantic-release-action@v3
       id: semantic-release
       with: 
         semantic_version: 18 # version numbers below can be in many forms: M, M.m, M.m.p
-        dry_run: true 
-        # Provide name of this branch to instruct semantic-release we want to make a (dry-run/test) production deployment. 
-        # If we didn't have this, semantic-release would not run even when using dry-run because this branch is not one of the production branches we use for performing deployments. 
-        branches: |
-          [            
-            '${{ steps.branch-name.outputs.current_branch }}'
-          ]
+        dry_run: true # Critical. If we do not do this, an actual deployment will happen. 
         extra_plugins: |
           conventional-changelog-conventionalcommits@4
           @semantic-release/changelog@6
@@ -38,10 +40,15 @@ jobs:
           @semantic-release/exec@6
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Do something when a new release published
+    
+    - uses: marocchino/sticky-pull-request-comment@v2
       if: steps.semantic-release.outputs.new_release_published == 'true'
-      run: |
-        echo "A new release would have been published"
-        echo "${{ steps.semantic-release.outputs.new_release_version }}"
-        echo "${{ steps.semantic-release.outputs.new_release_notes }}"
+      with:
+        message: |
+          # Test deployment results          
+
+          If this PR gets merged and a deployment occurs, this is the result of what will happen: 
+
+          * Previous version: ${{ steps.semantic-release.outputs.last_release_version }}
+          * New version: ${{ steps.semantic-release.outputs.new_release_version }}
+          * Release notes: ${{ steps.semantic-release.outputs.new_release_notes }}
