try fix git command

--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -28,8 +28,8 @@ jobs:
     # Help with how to squash and merge a PR: https://stackoverflow.com/a/5201642
     - name: Squash and merge the current pull request to simulate merging this PR 
       run: |
-        git fetch --depth=1
-        git reset --soft main && git commit -m "${{ github.event.pull_request.title }}"
+        git fetch main --depth=1
+        git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
         git checkout main && git pull
         git merge ${{ steps.branch-name.outputs.current_branch }}
 
