--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -2,6 +2,11 @@ name: PR review
 
 on: [pull_request]
 
+permissions:
+  contents: read # Access needed to checkout the repo.
+  issues: read # Needed to retrieve commits on a pull request.
+  pull-requests: write # Write access needed to create a comment.
+
 jobs:
   # Danger is a tool that can help during code reviews. Automate common 
   # code review tasks. https://danger.systems/js/
@@ -14,5 +19,4 @@ jobs:
       - name: Run danger 
         run: npx danger@11 ci --dangerfile dangerfile.js
         env:
-          # Bot runs on every pull request so make sure to only use read-only access token 
-          GITHUB_TOKEN: ${{ secrets.READ_ONLY_BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
