--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,25 @@ concurrency:
 # See example commands by choosing a package: https://swiftpackageindex.com/nativedevbr/swift-log/builds and viewing the build information for each environment to see the commands run in that environment. 
 
 jobs:
+  files-changed:
+    name: Detect what files changed
+    runs-on: ubuntu-latest
+    # Map a step output to a job output
+    outputs:
+      src: ${{ steps.changes.outputs.src }}
+    steps:
+      - uses: actions/checkout@3
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            src:
+              - 'Sources/**'
+              - 'Tests/**'
+
   older-xcode-test:
+    needs: files-changed
+    if: needs.files-changed.outputs.src == 'true' 
     strategy:
       matrix:
         # 12.4 = swift 5.3
@@ -69,6 +87,8 @@ jobs:
       if: ${{ always() }} # if running tests fails, we still want to parse the test results   
 
   xcode-test:
+    needs: files-changed
+    if: needs.files-changed.outputs.src == 'true' 
     strategy:
       matrix:
         # 13.3 = swift 5.6
@@ -122,29 +142,7 @@ jobs:
         github_token: ${{ secrets.READ_ONLY_BOT_TOKEN }}
         fail_on_failure: true 
         require_tests: true 
-      if: ${{ always() }} # if running tests fails, we still want to parse the test results     
-  
-  verify-cocoapods:
-    runs-on: macos-latest
-    name: Build cocoapods 
-    steps: 
-      - uses: actions/checkout@v2
-      - name: Set up XCode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: ${{ matrix.xcode }}
-
-      - name: Instal/update cocoapods 
-        run: gem install cocoapods 
-
-      - run: pod --version 
-
-      - name: Lint each cocoapod 
-        run: |
-          for file in *.podspec; do
-            echo "Verifying cocoapod: $file"
-            pod spec lint --allow-warnings "$file"
-          done
+      if: ${{ always() }} # if running tests fails, we still want to parse the test results 
 
   # With the introduction of having the Gist iOS SDK as a dependency in our SDK, we can no longer provide any building or testing for our SDK 
   # on Linux with Swift. This is because the Gist iOS SDK only supports iOS and does not compile on Linux. 
