--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -25,13 +25,13 @@ jobs:
 
     # Careful *not* to do a 'git push' anywhere since we are merging commits into production branches here!
     # Help with how to squash and merge a PR: https://stackoverflow.com/a/5201642
-    - name: Squash and merge the current pull request to simulate merging this PR 
-      run: |
-        git fetch --depth=1
-        git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
-        git checkout main && git pull
-        git merge ${{ steps.branch-name.outputs.current_branch }}
-
+    # - name: Squash and merge the current pull request to simulate merging this PR 
+#      run: |
+    - run: git fetch --depth=1
+    - run: git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
+    - run: git checkout main && git pull
+    - run: git merge ${{ steps.branch-name.outputs.current_branch }}
+    
     - uses: cycjimmy/semantic-release-action@v3
       id: semantic-release
       with: 
