--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -28,9 +28,14 @@ jobs:
     # - name: Squash and merge the current pull request to simulate merging this PR 
 #      run: |
     - run: git fetch --depth=1
+    - run: git log 
+    - run: git config user.email "ci@c.io" && git config user.name "CI Server"
     - run: git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
+    - run: git log  
     - run: git checkout main && git pull
+    - run: git log 
     - run: git merge ${{ steps.branch-name.outputs.current_branch }}
+    - run: git log 
     
     - uses: cycjimmy/semantic-release-action@v3
       id: semantic-release
