--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,6 @@
 {
     "tagFormat": "${version}",
+    "ci": false,
     "branches": [
         "main",
         { "name": "beta", "prerelease": true },
