--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -49,6 +49,7 @@ jobs:
           @semantic-release/git@10
           @semantic-release/github@8
           @semantic-release/exec@6
+        branch: ${{ steps.branch-name.outputs.current_branch }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
