--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -49,7 +49,7 @@ jobs:
           @semantic-release/git@10
           @semantic-release/github@8
           @semantic-release/exec@6
-        branch: ${{ github.ref }}
+        branch: 'ref/pulls/${{ steps.branch-name.outputs.ref_branch }}'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
