--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -36,7 +36,7 @@ jobs:
         ref: ${{ steps.branch-name.outputs.current_branch }}
         clean: false 
     - run: git config user.email "ci@c.io" && git config user.name "CI Server"
-    - run: git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
+    - run: git reset --soft main && git commit -m "${{ github.event.pull_request.title }}"
     - run: git log
     - uses: actions/checkout@v3
       with:
