--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -27,18 +27,15 @@ jobs:
     # Help with how to squash and merge a PR: https://stackoverflow.com/a/5201642
     # - name: Squash and merge the current pull request to simulate merging this PR 
 #      run: |
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 1
     - run: git log
     - uses: actions/checkout@v3
       with:
         ref: ${{ steps.branch-name.outputs.current_branch }}
-        clean: false 
     - run: git config user.email "ci@c.io" && git config user.name "CI Server"
-    - run: git reset --soft main && git commit -m "${{ github.event.pull_request.title }}"
+    - run: git fetch --depth=1
+    - run: git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
     - run: git log
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3 # forces CI server to actually change branch
       with:
         ref: main 
         clean: false 
