--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -52,10 +52,13 @@ jobs:
           @semantic-release/exec@6
         branches: |
           [
-            'main'
+            'main',
+            'refs/pull/${{ steps.branch-name.outputs.ref_branch }}'
           ]
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_EVENT_NAME: 'push'
+        GITHUB_REF: 'refs/heads/main'
     
     - uses: marocchino/sticky-pull-request-comment@v2
       if: steps.semantic-release.outputs.new_release_published == 'true'
