--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -9,12 +9,22 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  find-pr-open-for-branch:
+    runs-on: ubuntu-latest
+    outputs:
+      pr_number: ${{ steps.findPr.outputs.number }}
+      pr_title: ${{ steps.findPr.outputs.title }}
+    steps:
+      - uses: jwalton/gh-find-current-pr@v1
+        id: findPr
+
   semantic-release-dry-run:
+    needs: find-pr-open-for-branch
+    if: needs.find-pr-open-for-branch.outputs.pr_number !== '' 
     runs-on: ubuntu-latest
     name: Dry run deployment
     permissions:
-      contents: write # push git commits and tags 
-      issues: write   # comment on github issues 
+      issues: write # comment on github issues 
       pull-requests: write # comment and interact with PRs. 
     steps:
     - uses: actions/checkout@v3
@@ -31,7 +41,7 @@ jobs:
     - run: git log 
     - run: git checkout ${{ steps.branch-name.outputs.current_branch }}
     - run: git config user.email "ci@c.io" && git config user.name "CI Server"
-    - run: git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
+    - run: git reset --soft origin/main && git commit -m "${{ needs.find-pr-open-for-branch.outputs.pr_title }}"
     - run: git log  
     - run: git checkout main && git pull
     - run: git log 
@@ -57,10 +67,11 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
-    - name: Create commit comment
-      uses: peter-evans/commit-comment@v2
-      if: steps.semantic-release.outputs.new_release_published == 'true'
+    - name: Create comment
+      uses: peter-evans/create-or-update-comment@v2
+      if: steps.semantic-release.outputs.new_release_published == 'true'      
       with:
+        issue-number: ${{ needs.find-pr-open-for-branch.outputs.pr_number }}
         body: |
           # Test deployment results          
 
