--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -39,13 +39,13 @@ jobs:
 #      run: |
     - run: git fetch --depth=1
     - run: git log 
-    - run: git checkout ${{ steps.branch-name.outputs.current_branch }}
+    - run: git checkout "${{ steps.branch-name.outputs.current_branch }}-clean"
     - run: git config user.email "ci@c.io" && git config user.name "CI Server"
     - run: git reset --soft origin/main && git commit -m "${{ needs.find-pr-open-for-branch.outputs.pr_title }}"
     - run: git log  
     - run: git checkout main && git pull
     - run: git log 
-    - run: git merge ${{ steps.branch-name.outputs.current_branch }}
+    - run: git merge "${{ steps.branch-name.outputs.current_branch }}-clean"
     - run: git log 
     - run: git branch && git status
     
