--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -39,7 +39,7 @@ jobs:
 #      run: |
     - run: git fetch --depth=1
     - run: git log 
-    - run: git checkout "${{ steps.branch-name.outputs.current_branch }}-clean"
+    - run: git checkout -b "${{ steps.branch-name.outputs.current_branch }}-clean"
     - run: git config user.email "ci@c.io" && git config user.name "CI Server"
     - run: git reset --soft origin/main && git commit -m "${{ needs.find-pr-open-for-branch.outputs.pr_title }}"
     - run: git log  
