--- a/.github/workflows/simulate-merge-pr.yml
+++ b/.github/workflows/simulate-merge-pr.yml
@@ -20,12 +20,13 @@ jobs:
       run: |
         git fetch --depth=1
         git config user.email "ci@c.io" && git config user.name "CI Server"
+        git checkout -b "temp-squash-commits-branch"
         git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
         git log
     
     - name: Merge squashed commit to add new PR work onto main branch 
       run: |
         git checkout main && git pull && git checkout -b "simulated_merge_pr_${{ github.event.pull_request.number }}"
-        git merge "${{ steps.branch-name.outputs.current_branch }}"
+        git merge "temp-squash-commits-branch"
         git log
         git branch && git status
