--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -2,7 +2,7 @@ name: Deploy SDK
 
 on:
   push:
-    branches: [main, v1] # all branches where deployments currently occur. 
+    branches: [main, v1] # all branches where deployments currently occur. Make sure this list matches list of branches in  `.releaserc` file. 
 
 permissions:
   contents: write # access to push the git tag
@@ -10,7 +10,7 @@ permissions:
   pull-requests: write # Needed to create PR to sync changes from main to develop
 
 jobs:
-  deploy-sdk:
+  deploy-git-tag:
     name: Deploy git tag
     runs-on: ubuntu-latest
     outputs:
@@ -118,8 +118,8 @@ jobs:
 
   deploy-cocoapods:
     name: Deploy SDK to Cocoapods
-    needs: [deploy-sdk]
-    if: needs.deploy-sdk.outputs.new_release_published == 'true' # only run if a git tag was made.
+    needs: [deploy-git-tag]
+    if: needs.deploy-git-tag.outputs.new_release_published == 'true' # only run if a git tag was made.
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v2
