--- a/.github/workflows/simulate-merge-pr.yml
+++ b/.github/workflows/simulate-merge-pr.yml
@@ -16,17 +16,17 @@ jobs:
     - uses: actions/checkout@v3
 
     # Help with how to squash and merge a PR: https://stackoverflow.com/a/5201642
-    - name: Squash all commits on current branch 
+    - name: Squash all commits of the current branch into 1 commit 
       run: |
         git fetch --depth=1
-        git config user.email "ci@c.io" && git config user.name "CI Server"
         git checkout -b "temp-squash-commits-branch"
         git reset --soft origin/main && git commit -m "${{ github.event.pull_request.title }}"
         git log
     
-    - name: Merge squashed commit to add new PR work onto main branch 
+    - name: Merge squashed commit to main branch to simulate merging PR into main 
       run: |
-        git checkout main && git pull && git checkout -b "simulated_merge_pr_${{ github.event.pull_request.number }}"
+        git checkout main && git pull && git checkout -b "temp-simulated_merge_pr_${{ github.event.pull_request.number }}"
         git merge "temp-squash-commits-branch"
         git log
         git branch && git status
+        git push -u origin "temp-simulated_merge_pr_${{ github.event.pull_request.number }}"
