--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,5 @@
 name: Tests
+
 on: [push, pull_request]
 
 # Thanks, https://swiftpackageindex.com/docs/builds for help coming up with *how* we build the artifacts. Swift build on Linux, XCode build on mac. Changing the XCode version to a specific version is how to set what version of Swift we want to test against on macOS. This is more real-world but also because I encountered issues with trying to install a Swift version in the macOS environment and try to run tests on it. 
@@ -15,6 +16,8 @@ jobs:
         xcode: ["12.4", "12.5", "13.0"]
     runs-on: macos-11
     name: XCode macOS tests (xcode ${{ matrix.xcode }})
+    permissions:
+      checks: write # Need write permission to add test result check.
     steps:
     - uses: actions/checkout@v2
     - name: Set up XCode
@@ -58,10 +61,10 @@ jobs:
       with:
         check_name: XCode macOS tests (xcode ${{ matrix.xcode }}) - Results
         report_paths: test-report.xml
-        github_token: ${{ secrets.READ_ONLY_BOT_TOKEN }}
-        fail_on_failure: true 
-        require_tests: true 
-      if: ${{ always() }} # if running tests fails, we still want to parse the test results   
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        fail_on_failure: true
+        require_tests: true
+      if: ${{ always() }} # if running tests fails, we still want to parse the test results
 
   xcode-test:
     strategy:
@@ -71,6 +74,8 @@ jobs:
         xcode: ["13.3"]
     runs-on: macos-12
     name: XCode macOS tests (xcode ${{ matrix.xcode }})
+    permissions:
+      checks: write # Need write permission to add test result check.
     steps:
     - uses: actions/checkout@v2
     - name: Set up XCode
@@ -114,69 +119,8 @@ jobs:
       with:
         check_name: XCode macOS tests (xcode ${{ matrix.xcode }}) - Results
         report_paths: test-report.xml
-        github_token: ${{ secrets.READ_ONLY_BOT_TOKEN }}
-        fail_on_failure: true 
-        require_tests: true 
-      if: ${{ always() }} # if running tests fails, we still want to parse the test results     
-  
-  verify-cocoapods:
-    runs-on: macos-latest
-    name: Build cocoapods 
-    steps: 
-      - uses: actions/checkout@v2
-      - name: Set up XCode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: ${{ matrix.xcode }}
-
-      - name: Instal/update cocoapods 
-        run: gem install cocoapods 
-
-      - run: pod --version 
-
-      - name: Lint each cocoapod 
-        run: |
-          for file in *.podspec; do
-            echo "Verifying cocoapod: $file"
-            pod spec lint --allow-warnings "$file"
-          done
-
-  # With the introduction of having the Gist iOS SDK as a dependency in our SDK, we can no longer provide any building or testing for our SDK 
-  # on Linux with Swift. This is because the Gist iOS SDK only supports iOS and does not compile on Linux. 
-  # 
-  # spm-test:
-  #   strategy:
-  #     matrix: 
-  #       swift: ["5.3", "5.4", "5.5", "5.6"]
-  #       os: [ubuntu-latest]
-  #       # Can add `-arch X` to `swift build` command to compile for an architecture. Examples: -arch arm64, -arch x86_64
-  #   runs-on: ${{ matrix.os }}
-  #   name: SPM Linux tests (swift ${{ matrix.swift }})
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Set up Swift
-  #     uses: fwal/setup-swift@v1
-  #     with:
-  #         swift-version: '${{ matrix.swift }}'
-
-  #   # Must use `--parallel` to use `--xunit-output`. 
-  #   # `--enable-test-discovery` is for older Swift versions to work. Should be able to move when min SDK is 5.4
-  #   - name: Run tests (swift ${{ matrix.swift }})
-  #     run: swift test --parallel --xunit-output test-report.xml --enable-test-discovery
-
-  #   - name: Upload test report 
-  #     uses: actions/upload-artifact@v2
-  #     with:      
-  #       name: spm-test-report
-  #       path: test-report.*
-  #     if: ${{ always() }}
-  #   - name: Publish test results
-  #     uses: mikepenz/action-junit-report@v2      
-  #     with:
-  #       check_name: SPM Linux tests (swift ${{ matrix.swift }}) - Results 
-  #       report_paths: test-report.xml
-  #       github_token: ${{ secrets.READ_ONLY_BOT_TOKEN }}
-  #       fail_on_failure: true 
-  #       require_tests: true 
-  #     if: ${{ always() }} # if running tests fails, we still want to parse the test results     
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        fail_on_failure: true
+        require_tests: true
+      if: ${{ always() }} # if running tests fails, we still want to parse the test results  
       
